// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Group renders correctly with a list of more 1`] = `
<div>
  <div
    class="mock-helmet"
  >
    <div
      data-helmet-tag="title"
    >
      plural | EYESBOUND
    </div>
    <div
      data-content="plural | EYESBOUND"
      data-helmet-tag="meta"
      data-name="title"
    />
    <div
      data-content="plural | EYESBOUND"
      data-helmet-tag="meta"
      data-property="og:title"
    />
    <div
      data-content="plural | EYESBOUND"
      data-helmet-tag="meta"
      data-name="twitter:title"
    />
    <div
      data-helmet-tag="link"
      data-href="https://eyesbound.com/path/"
      data-rel="canonical"
    />
    <div
      data-content="https://eyesbound.com/path/"
      data-helmet-tag="meta"
      data-property="og:url"
    />
  </div>
  <header>
    <h1
      class=""
      css="[object Object]"
    >
      <a
        href="/"
      >
        EYESBOUND
      </a>
    </h1>
    <nav
      class=""
      css="[object Object]"
    >
      <ul>
        <li>
          <a
            href="/picture"
          >
            Overview
          </a>
        </li>
        <li>
          <a
            href="/series/shuttered"
          >
            »Shuttered«
          </a>
        </li>
        <li>
          <a
            href="/category/architecture"
          >
            Architecture
          </a>
        </li>
        <li>
          <a
            href="/category/environment"
          >
            Environment
          </a>
        </li>
        <li>
          <a
            href="/category/floral"
          >
            Floral
          </a>
        </li>
        <li>
          <a
            href="/category/light"
          >
            Light
          </a>
        </li>
        <li>
          <a
            href="/worldmap"
          >
            Worldmap
          </a>
        </li>
        <li>
          <a
            href="/imprint"
          >
            Contact
          </a>
        </li>
      </ul>
      <div>
        Menu
      </div>
    </nav>
    <button
      aria-label="Switch theme"
      class=""
      css="[object Object]"
      type="button"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 21c0 .6.5 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19a7 7 0 00-4 12.7V17c0 .6.5 1 1 1h6c.6 0 1-.5 1-1v-2.3A7 7 0 0012 2zm2.9 11.1l-.9.6V16h-4v-2.3l-.8-.6a5 5 0 115.7 0z"
        />
      </svg>
      <div
        class="mock-helmet"
      >
        <div
          data-content="#000000"
          data-helmet-tag="meta"
          data-name="theme-color"
        />
      </div>
    </button>
  </header>
  <main
    css="[object Object]"
  >
    <h1>
      plural
       (
      2
      )
    </h1>
    <ul>
      <li>
        <a
          aria-label="link-to-path"
          href="/path/1234-5678-90"
        >
          List Data Title 1
        </a>
      </li>
      <li>
        <a
          aria-label="link-to-path"
          href="/path/9876-5432-10"
        >
          List Data Title 2
        </a>
      </li>
    </ul>
  </main>
</div>
`;

exports[`Group renders correctly with a list of one 1`] = `
<div>
  <div
    class="mock-helmet"
  >
    <div
      data-helmet-tag="title"
    >
      plural | EYESBOUND
    </div>
    <div
      data-content="plural | EYESBOUND"
      data-helmet-tag="meta"
      data-name="title"
    />
    <div
      data-content="plural | EYESBOUND"
      data-helmet-tag="meta"
      data-property="og:title"
    />
    <div
      data-content="plural | EYESBOUND"
      data-helmet-tag="meta"
      data-name="twitter:title"
    />
    <div
      data-helmet-tag="link"
      data-href="https://eyesbound.com/path/"
      data-rel="canonical"
    />
    <div
      data-content="https://eyesbound.com/path/"
      data-helmet-tag="meta"
      data-property="og:url"
    />
  </div>
  <header>
    <h1
      class=""
      css="[object Object]"
    >
      <a
        href="/"
      >
        EYESBOUND
      </a>
    </h1>
    <nav
      class=""
      css="[object Object]"
    >
      <ul>
        <li>
          <a
            href="/picture"
          >
            Overview
          </a>
        </li>
        <li>
          <a
            href="/series/shuttered"
          >
            »Shuttered«
          </a>
        </li>
        <li>
          <a
            href="/category/architecture"
          >
            Architecture
          </a>
        </li>
        <li>
          <a
            href="/category/environment"
          >
            Environment
          </a>
        </li>
        <li>
          <a
            href="/category/floral"
          >
            Floral
          </a>
        </li>
        <li>
          <a
            href="/category/light"
          >
            Light
          </a>
        </li>
        <li>
          <a
            href="/worldmap"
          >
            Worldmap
          </a>
        </li>
        <li>
          <a
            href="/imprint"
          >
            Contact
          </a>
        </li>
      </ul>
      <div>
        Menu
      </div>
    </nav>
    <button
      aria-label="Switch theme"
      class=""
      css="[object Object]"
      type="button"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 21c0 .6.5 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19a7 7 0 00-4 12.7V17c0 .6.5 1 1 1h6c.6 0 1-.5 1-1v-2.3A7 7 0 0012 2zm2.9 11.1l-.9.6V16h-4v-2.3l-.8-.6a5 5 0 115.7 0z"
        />
      </svg>
      <div
        class="mock-helmet"
      >
        <div
          data-content="#000000"
          data-helmet-tag="meta"
          data-name="theme-color"
        />
      </div>
    </button>
  </header>
  <main
    css="[object Object]"
  >
    <h1>
      plural
       (
      1
      )
    </h1>
    <ul>
      <li>
        <a
          aria-label="link-to-path"
          href="/path/1234-5678-90"
        >
          List Data Title
        </a>
      </li>
    </ul>
  </main>
</div>
`;

exports[`Group renders correctly with a list of zero 1`] = `
<div>
  <div
    class="mock-helmet"
  >
    <div
      data-helmet-tag="title"
    >
      plural | EYESBOUND
    </div>
    <div
      data-content="plural | EYESBOUND"
      data-helmet-tag="meta"
      data-name="title"
    />
    <div
      data-content="plural | EYESBOUND"
      data-helmet-tag="meta"
      data-property="og:title"
    />
    <div
      data-content="plural | EYESBOUND"
      data-helmet-tag="meta"
      data-name="twitter:title"
    />
    <div
      data-helmet-tag="link"
      data-href="https://eyesbound.com/path/"
      data-rel="canonical"
    />
    <div
      data-content="https://eyesbound.com/path/"
      data-helmet-tag="meta"
      data-property="og:url"
    />
  </div>
  <header>
    <h1
      class=""
      css="[object Object]"
    >
      <a
        href="/"
      >
        EYESBOUND
      </a>
    </h1>
    <nav
      class=""
      css="[object Object]"
    >
      <ul>
        <li>
          <a
            href="/picture"
          >
            Overview
          </a>
        </li>
        <li>
          <a
            href="/series/shuttered"
          >
            »Shuttered«
          </a>
        </li>
        <li>
          <a
            href="/category/architecture"
          >
            Architecture
          </a>
        </li>
        <li>
          <a
            href="/category/environment"
          >
            Environment
          </a>
        </li>
        <li>
          <a
            href="/category/floral"
          >
            Floral
          </a>
        </li>
        <li>
          <a
            href="/category/light"
          >
            Light
          </a>
        </li>
        <li>
          <a
            href="/worldmap"
          >
            Worldmap
          </a>
        </li>
        <li>
          <a
            href="/imprint"
          >
            Contact
          </a>
        </li>
      </ul>
      <div>
        Menu
      </div>
    </nav>
    <button
      aria-label="Switch theme"
      class=""
      css="[object Object]"
      type="button"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M9 21c0 .6.5 1 1 1h4c.6 0 1-.5 1-1v-1H9v1zm3-19a7 7 0 00-4 12.7V17c0 .6.5 1 1 1h6c.6 0 1-.5 1-1v-2.3A7 7 0 0012 2zm2.9 11.1l-.9.6V16h-4v-2.3l-.8-.6a5 5 0 115.7 0z"
        />
      </svg>
      <div
        class="mock-helmet"
      >
        <div
          data-content="#000000"
          data-helmet-tag="meta"
          data-name="theme-color"
        />
      </div>
    </button>
  </header>
  <main
    css="[object Object]"
  >
    <h1>
      plural
       (
      0
      )
    </h1>
    <ul />
  </main>
</div>
`;
